--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.redis.port=6379
 spring.cache.cache-names=itemCache,customerCache
 # This sets the same time for both, need to override in java config if other behaviour is desired
 spring.cache.redis.time-to-live=60000
+
+logging.level.org.springframework.cache=TRACE
+logging.level.org.springframework.data.redis=TRACE
+logging.level.org.springframework.data.redis.cache=TRACE
+logging.level.org.springframework.data.redis.connection=TRACE
