--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:h2:~/liquibase;DB_CLOSE_ON_EXIT=FALSE
 spring.redis.host=localhost
 spring.redis.port=6379
 
+logging.level.com.wixia.controller=DEBUG
 logging.level.org.springframework.cache=TRACE
 logging.level.org.springframework.data.redis=TRACE
 logging.level.org.springframework.data.redis.cache=TRACE
